# cfold

./: .coverage  .foldrc  .gitignore  .grk_cache.json  .grk_session.json  .grk_session.pid  README.md  __temp.json  brief.typ  codefold.json  grk_default_output.json  makefile  mkdocs.yml  output.json  pyproject.toml  pytest.ini  start.json  viz.sh
.github/workflows/: python-app.yml  tests.yml
.zed/: settings.json
cfold/: __init__.py  cfold.py
cfold/resources/: instructions.txt  py.yml
cfold/utils/: diff.py  foldignore.py  instructions.py  references.py
completions/: cfold.fish
docs/: api.md  index.md  usage.md
src/cfold/: __init__.py  cfold.py  models.py
src/cfold/cli/: __init__.py  add.py  fold.py  init.py  main.py  rc.py  unfold.py  view.py
src/cfold/resources/: prompts.yaml  py.yml
src/cfold/utils/: __init__.py  foldignore.py  instructions.py  references.py  treeviz.py
tests/: test_cfold.py  test_models.py  test_utils.py
