[project]
name = "cfold"
version = "0.2.0"
description = "A command line tool to fold and unfold Python projects for LLM interaction"
authors = [{ name = "wr1", email = "8971152+wr1@users.noreply.github.com" }]
requires-python = "~=3.10"
readme = "README.md"
license = "MIT"
dependencies = [
    "pyyaml>=6.0.2,<7",
    "click>=8.1.7,<9",
    "rich>=13.7.1",
    "rich-click>=1.7.0",  # Added for Rich-styled Click help
    "pyperclip>=1.8.2",  # Added to handle clipboard operations
    "pydantic>=2.0.0,<3",  # Added for data modeling
]

[project.scripts]
cfold = "cfold.cli.main:cli"

[dependency-groups]
dev = [
    "flake8>=6.0.0,<7",
    "pytest>=7.1.3,<8",
    "pytest-cov>5.0.0",
]

[tool.hatch.build.targets.sdist]
include = ["src/cfold"]

[tool.hatch.build.targets.wheel]
include = ["src/cfold"]

[tool.hatch.build.targets.wheel.sources]
"src/cfold" = "cfold"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"


