[project]
name = "cfold"
version = "0.1.0"
description = "Code folding tool for LLM interaction"
authors = ["Your Name <you@example.com>"]
requires-python = ">=3.8"
dependencies = [
    "rich",
    "pyperclip",
    "pyyaml",
    "pydantic",
]

[project.scripts]
cfold = "cfold.cli.main:main"

[tool.ruff]
line-length = 88

[tool.pytest.ini_options]
addopts = "-v"

